# me-a

./: .gitignore  README.md  main.py  pyproject.toml
app/: activities.py  workflow.py
components/: atlan-storage.yaml  aws-secrets.yaml  deployment-secrets.yaml  eventstore.yaml  objectstore.yaml  secretstore.yaml  statestore.yaml
deploy/: Dockerfile  README.md  entrypoint.sh  supervisord.conf
docs/: ARCHITECTURE.md  DEMO.md  FRAMEWORK_NOTES.md  sample_db_setup.sql
frontend/static/: script.js  styles.css
frontend/templates/: index.html
local/dapr/: statestore.db-shm  statestore.db-wal
local/dapr/eventstore/: 006edae7-aa06-4330-b7b6-5782a7ee6837  00b91060-2e43-4218-a95a-d446ca15729d  012059ae-de04-4e08-83dc-fdcacb3d3a27  0186cb8d-d5b1-4f2f-a203-549976e754ef  01fe9ea7-890a-447c-9341-7d4633d58b51  0201e63c-56b6-4c2a-884c-e6a3a4d18479  022cf258-3976-4c67-bd0e-070de4bf6071  02348a09-9595-4bde-a9f8-a27ddbe77047  02f79f45-3bb0-43a0-9f12-e7e3eb808e08  030b19c7-b01a-40b0-b8d3-35b51d12eb3f  03c8993a-0fb9-4469-98f7-854f660e0328  05618b89-99c1-4144-ab00-460a3fa8e3e8  05f73985-5d8e-4389-aee1-7c6a05d079a7  060b5c4b-a84f-4c0e-8742-4edfaa5b2a07  06abf7b8-3dc9-4ce6-9d12-fa8c64463738  06bac6b2-8c7b-412a-92dd-65affd2bfc8f  089cb95c-1616-4b09-b934-bd940675422d  08a007b6-fa23-489d-be32-62b0765a48a8  09e75a1b-2b9c-4cee-ab0a-b56525096f83  0a3548c0-8d59-4519-a61c-50de9b9bea68  0b7525c1-fe89-4fc8-8bb6-af00ccb60a19  0bd2614f-7f19-4823-83e7-6693f2378ce6  0bfcbbc8-6531-4cf4-888c-1e919fa7eb4f  0d7e0cda-d4de-464c-bd69-efcb4f56a45f  0d869700-8ea7-4833-b5c0-fd4c09e0c52c  0da522fb-0968-47a6-803f-d38d09807882  0daa797e-bbfd-4b25-8b37-8857d9cb4892  0df0cc91-954a-4697-8b32-848c81399905  0e0977a3-0734-4efb-86a3-ba21e686f4e8  0f0ddd1d-7b17-4f5b-b081-d145c1c5baf9  0f80b999-a578-4579-84a5-0c526433b77e  1141f1cf-f592-488a-9924-8e0629075a88  12f21625-0b79-4a8e-8565-cdebe237801c  134d9995-a2bd-4a44-99fa-cb2632855798  142f0ec5-87cd-47e7-97a9-46068cffdb03  143a8af1-d1ab-4e53-a318-25df00965b39  1470eaaa-a308-4f36-bd0e-e50d64985955  14ca56b5-f77b-497f-bccc-1d889ce29a59  14ea2ee6-f27f-4451-8b48-65b3cadd020a  15bf1b54-d4d3-400d-956d-f7b2a9c09135  (+267 more)
local/tmp/persistent-artifacts/apps/default/workflows/449e97a6-7b67-4e54-868b-714e02c98ba2/: config.json
local/tmp/persistent-artifacts/apps/default/workflows/53db389a-04cd-4801-b373-8e0c1141d8cb/: config.json
local/tmp/persistent-artifacts/apps/default/workflows/5accfdd5-139d-4b41-95fd-247b20944c7f/: config.json
tests/: README.md  conftest.py  pytest.ini  test_basic.py  test_core.py  test_hello_world.py
(+23 files in other folders)
